<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="CREDENTIALS"
                android:textColor="@color/colorDarkGrey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtUsername_reg"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:background="@drawable/etxt_round"
                android:hint="Username"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPassword_reg"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:background="@drawable/etxt_round"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/information"
                android:textColor="@color/colorDarkGrey"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText

                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:background="@drawable/etxt_round"
                android:hint="Last Name"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:background="@drawable/etxt_round"
                android:hint="First Name"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtMiddleName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:background="@drawable/etxt_round"
                android:hint="Middle Name"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtCivilStatus"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:background="@drawable/etxt_round"
                android:hint="Civil Status"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="MALE" />

                    <RadioButton
                        android:id="@+id/rbFeMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="FEMALE" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/voter" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/rbVoterYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="YES" />

                    <RadioButton
                        android:id="@+id/rbVoterNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="NO" />


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birth_date" />

            <EditText
                android:id="@+id/txtDateofBirth"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:background="@drawable/etxt_round"

                android:hint="yyyy-dd-mm"
                android:inputType="date"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/txtPlaceofBirth"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:background="@drawable/etxt_round"
                android:hint="Place of Birth"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/txtCitizenship"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:background="@drawable/etxt_round"
                android:hint="Citizenship"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/txtOccupation"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:background="@drawable/etxt_round"
                android:hint="Occupation"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select:" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:prompt="@string/spinner_title" />


            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_round"
                android:onClick="next_Clicked"
                android:text="@string/btn_next"
                android:textColor="@color/colorWhite" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>